--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,24 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>ControladorLogueo</servlet-name>
+  	<display-name>ControladorLogueo</display-name>
+  	<description></description>
+  	<servlet-class>Controlador.ControladorLogueo</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>ControladorProducto</servlet-name>
+  	<display-name>ControladorProducto</display-name>
+  	<description></description>
+  	<servlet-class>Controlador.ControladorProducto</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ControladorLogueo</servlet-name>
+  	<url-pattern>/ControladorLogueo</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ControladorProducto</servlet-name>
+  	<url-pattern>/ControladorProducto</url-pattern>
+  </servlet-mapping>
 </web-app>
